--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- iOS specific meta tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="PizzaCalc">
+    <meta name="apple-mobile-web-app-title" content="DoughCalc">
     <link rel="apple-touch-icon" href="/logo.svg">
 
     <script src="https://cdn.tailwindcss.com"></script>
